Pushed from Dropbox. Fixed broken css.

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ nav.header {
 			display: inline-block;
 		}
 
-		& .banner-search {
+		& form.banner-search {
 			background-color: rgba(0, 0, 0, 0);
 			display: inline-block;
 			margin-top: 8px;
@@ -38,7 +38,7 @@ nav.header {
 		}
 	}
 
-	& .search {
+	& form.search {
 		border-radius: 0;
 		display: none;
 		padding-top: 8px;
